# sample_cq_interface2023

./: README.md
bldc_test/: .cproject  .gitignore  bldc_test.rcpc
bldc_test/generate/: hwsetup.c  intprg.c  iodefine.h  lowlvl.src  resetprg.c  vecttbl.c
bldc_test/matlab_dll/: matlab_bldc.cpp  matlab_bldc.h  matlab_dll.cpp  matlab_dll.def  matlab_dll.sln  matlab_dll.vcxproj  resource.h
bldc_test/simulink/: MatGetBLDC_PWM_U.m  MatGetBLDC_PWM_V.m  MatGetBLDC_PWM_W.m  MatInitBLDCHandle.m  MatReqInt_BLDC.m  MatSetBLDCData.m  bldc.slx  bldc.slxc  bldc_save.slx  init_bldc.m  matlab_dll.h  ulink.m
bldc_test/src/: bldc_test.c  bldc_test.h  cmt.c  mtu3.c  mtu3.h  safeguard.c  safeguard.h  sns.c
bldc_test_motor_test_boad/: .cproject  .gitignore  .project  bldc_test.rcpc
bldc_test_motor_test_boad/generate/: dbsct.c  hwsetup.c  lowsrc.c  vect.h  vecttbl.c
bldc_test_motor_test_boad/src/: bldc_test.c  cmt.c  cmt.h  port.c  port.h  sns.h
qemu-6.0.0/: .gitignore  gdbstub.c
qemu-6.0.0/default-configs/devices/: rx-softmmu.mak
qemu-6.0.0/hw/adc/: Kconfig  meson.build  renesas_s12ad.c
qemu-6.0.0/hw/gpio/: Kconfig  meson.build  rx_ioport.c
qemu-6.0.0/hw/intc/: rx_icu.c
qemu-6.0.0/hw/misc/: Kconfig  meson.build  rx_system.c
qemu-6.0.0/hw/rx/: Kconfig  meson.build  rx-gdbsim.c  rx24t.c  rx62t.c  rxt-gdbsim.c
qemu-6.0.0/hw/timer/: Kconfig  meson.build  renesas_mtu.c  renesas_mtu0.c  renesas_mtu1.c  renesas_mtu2.c  renesas_mtu34.c  rx62t_keytest.c
qemu-6.0.0/include/hw/adc/: renesas_s12ad.h
qemu-6.0.0/include/hw/gpio/: rx_ioport.h
(+9 files in other folders)
